src/objects/MCAR_Selected_Sites__c.object
<CustomObject>
    <fields>
        <fullName>MCAR_Man_Site_IsSelected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSelected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MCAR_No__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MCAR No</label>
        <referenceTo>MCAR__c</referenceTo>
        <relationshipLabel>MCAR Selected Sites</relationshipLabel>
        <relationshipName>MCAR_Selected_Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MCAR_Sel_Man_Site_Address__c</fullName>
        <label>Manufacturer Site Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MCAR_Sel_Manuf_Site__c</fullName>
        <label>Manufacturing Site</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <label>MCAR Selected Sites</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MCAR_Sel_Manuf_Site__c</columns>
        <columns>MCAR_No__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>MCAR Selected Sites Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MCAR Selected Sites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>